crates/core/src/events/snapshots/everruns_core__events__contract_tests__event_data_output_message_started.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "message_id": "message_00000000000000000000000000000003",
  "model": "gpt-5.2"
}
