crates/core/src/events/snapshots/everruns_core__events__contract_tests__event_data_reason_started.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "harness_id": "harness_00000000000000000000000000000005",
  "agent_id": "agent_00000000000000000000000000000004",
  "metadata": {
    "model": "gpt-5.2"
  }
}
