crates/core/src/events/snapshots/everruns_core__events__contract_tests__event_data_tool_started.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "tool_call": {
    "id": "tc_1",
    "name": "get_weather",
    "arguments": {
      "city": "London"
    }
  }
}
