crates/core/src/events/snapshots/everruns_core__events__contract_tests__event_data_turn_cancelled.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "reason": "User requested",
  "usage": {
    "input_tokens": 50,
    "output_tokens": 25
  }
}
