crates/core/src/events/snapshots/everruns_core__events__contract_tests__event_data_turn_started.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "input_message_id": "message_00000000000000000000000000000003",
  "input_content": "Hello"
}
